@@ -1,4 +1,4 @@
-local E, L, V, P, G, _ = unpack(ElvUI);
+local E, L, V, P, G = unpack(ElvUI);
 local MER = E:GetModule('MerathilisUI')
 local MERC = E:NewModule('muiChat')
 local CH = E:GetModule('Chat')
